--- a/bootstrap_sandbox.html
+++ b/bootstrap_sandbox.html
@@ -12,6 +12,15 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-auto">
+          <img src="http://lezioni.meneghetti.univr.it//imageapi/LXI/m0061_0visn20_0000a2.jp2/1312,104,1904,7776/90,/180/default.jpg" class="rounded mx-auto d-block" >
+    
+        </div>
+        <div class="col-md-auto">
+          One of three columns
+       
     <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
           <a class="nav-link active" id="home-tab" data-bs-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Home</a>
@@ -28,6 +37,11 @@
         <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">test 2</div>
         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">test 3</div>
       </div>
+    </div>
+ 
+
+  </div>
+</div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
